debian-policy (3.9.3.1) UNRELEASED; urgency=low

  * Fix mistaken word choice (prefix instead of suffix) in the upgrading
    checklist entry for 3.9.3.0.
  * Add some missing entries to the virtual package names list changelog.

 -- Russ Allbery <rra@debian.org>  Wed, 22 Feb 2012 20:07:42 -0800

debian-policy (3.9.3.0) unstable; urgency=low

  [ Russ Allbery ]
  * Update the copyright format document to the version of DEP-5 from the
    DEP web site and apply additional changes from subsequent discussion
    in debian-devel and debian-project.  Revise for clarity, to add more
    examples, and to update the GFDL license versions.  Thanks, Steve
    Langasek, Charles Plessy, Justin B Rye, and Jonathan Nieder.
    (Closes: #658209, #648387)
  * Publish the copyright format specification as copyright-format-1.0 so
    that later versions can be added without removing previous versions of
    the standard.  Patch from Charles Plessy.  (Closes: #646119)
  * Policy: Improve Architecture field in source package
    Wording: Raphaël Hertzog <hertzog@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Charles Plessy <plessy@debian.org>
    Seconded: Guillem Jover <guillem@debian.org>
    Closes: #626779
  * Policy: Initial Debian maintainers need not be listed in copyright
    Wording: Charles Plessy <plessy@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Raphaël Hertzog <hertzog@debian.org>
    Seconded: Andrew McMillan <andrew@morphoss.com>
    Closes: #593533
  * Policy: Document cron job file naming restrictions
    Wording: Karl E. Jorgensen <karl@jorgensen.org.uk>
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Dominic Hargreaves <dom@earth.li>
    Seconded: Javier Fernández-Sanguino Peña <jfs@computer.org>
    Closes: #609162
  * Policy: Document issues with conflicting packages sharing a conffile
    Wording: Russ Allbery <rra@debian.org>