@@ -3,6 +3,12 @@ debian-policy (3.9.3.1) UNRELEASED; urgency=low
   * Fix mistaken word choice (prefix instead of suffix) in the upgrading
     checklist entry for 3.9.3.0.
   * Add some missing entries to the virtual package names list changelog.
+  * Remove unused substitution variable generated by the build.  Thanks,
+    Charles Plessy.
+  * Strip down and reformat debian/rules to remove unused variables,
+    references to old files no longer included, use a more standard
+    layout and standardize variable names, and add comments for better
+    maintainability.
 
  -- Russ Allbery <rra@debian.org>  Wed, 22 Feb 2012 20:07:42 -0800
 
